--- a/help.html
+++ b/help.html
@@ -6,7 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bob's trip in HELL</title>
 </head>
-<body>
-    balazs ezt csinald majd meg fancyre<br>legyen felsorolás, címek meg minded szar.<br>css nem kell, max a tagek style attributuma
+<body background="helpbg.jpg">
+    <div>
+        <h1 style="font-family: Fette UNZ Fraktur; color: #850505; font-size: 100px; text-align: center;margin-bottom: 0px;">
+           Bob's trip in hell 
+        </h1>
+        <h2 style="font-family: Fette UNZ Fraktur; color: #850505; font-size: 40px; text-align: center;margin-top: 10px;">
+            Explaining the game
+        </h2>
+    </div>
+    <div>
+        <h3 style="font-family: Fette UNZ Fraktur; color: #850505; font-size: 50px;margin-bottom: 0px;">
+            Controls
+        </h3>
+        <p style="color: crimson;padding-left: 50px;margin-top: 5px;"> lorem ipsum maderfaker</p>
+        <h3 style="font-family: Fette UNZ Fraktur; color: #850505; font-size: 50px;margin-bottom: 0px;">
+            Skills explained
+        </h3>
+        <p style="color: crimson;padding-left: 50px;margin-top: 5px;"> lorem ipsum maderfaker</p>
+    </div>
 </body>
 </html>
