--- a/help.html
+++ b/help.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bob's trip in HELL</title>
 </head>
-<body background="helpbg.jpg">
+<body background="helpbg.jpg" style="background-size: cover;">
     <div>
         <h1 style="font-family: Fette UNZ Fraktur; color: #850505; font-size: 100px; text-align: center;margin-bottom: 0px;">
            Bob's trip in hell 
