--- a/help.html
+++ b/help.html
@@ -4,26 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Bob's trip in HELL</title>
 </head>
-<body background="helpbg.jpg" style="background-size: cover;">
+<body background="helpbg.jpg">
     <div>
-        <h1 style="font-family: Fette UNZ Fraktur; color: #850505; font-size: 100px; text-align: center;margin-bottom: 0px;">
+        <h1 id="cim1">
            Bob's trip in hell 
         </h1>
-        <h2 style="font-family: Fette UNZ Fraktur; color: #850505; font-size: 40px; text-align: center;margin-top: 10px;">
+        
+        <h2  id="cim2">
             Explaining the game
         </h2>
+        
     </div>
     <div>
-        <h3 style="font-family: Fette UNZ Fraktur; color: #850505; font-size: 50px;margin-bottom: 0px;">
+        <h3 id="cim3">
             Controls
         </h3>
-        <p style="color: crimson;padding-left: 50px;margin-top: 5px;"> lorem ipsum maderfaker</p>
-        <h3 style="font-family: Fette UNZ Fraktur; color: #850505; font-size: 50px;margin-bottom: 0px;">
+        <p> lorem ipsum maderfaker</p>
+        <h3 id="cim3">
             Skills explained
         </h3>
-        <p style="color: crimson;padding-left: 50px;margin-top: 5px;"> lorem ipsum maderfaker</p>
+        <p> lorem ipsum maderfaker</p>
     </div>
 </body>
 </html>
