--- a/help.html
+++ b/help.html
@@ -24,9 +24,11 @@
         </h3>
         <p> lorem ipsum maderfaker</p>
         <h3 id="cim3">
-            Skills explained
+            Items explained
         </h3>
-        <p> lorem ipsum maderfaker</p>
+        <p> Each round, you can select items, that have energy costs. <br>
+            You will have a total of 10 energy, gaining 2 energy each round. <br>
+            Items that cost can be trashed for some as well, if you are running low. </p>
     </div>
 </body>
 </html>
