--- a/help.html
+++ b/help.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Bob's trip in HELL</title>
 </head>
-<body background="helpbg.jpg">
+<body background="helpbg.jpg" >
     <div>
         <h1 id="cim1">
            Bob's trip in hell 
@@ -29,6 +29,11 @@
         <p> Each round, you can select items, that have energy costs. <br>
             You will have a total of 10 energy, gaining 2 energy each round. <br>
             Items that cost can be trashed for some as well, if you are running low. </p>
+        <h3 id="cim3">
+            List of items
+        </h3>
+        <p> While your item is selected, you can see the stats of it above Bob. <br>
+            Potions in the game, if used, give passive perks for example: DMG boost </p>
     </div>
 </body>
 </html>
