--- a/help.html
+++ b/help.html
@@ -28,7 +28,8 @@
         </h3>
         <p> Each round, you can select items, that have energy costs. <br>
             You will have a total of 10 energy, gaining 2 energy each round. <br>
-            Items that cost can be trashed for some as well, if you are running low. </p>
+            Items that cost can be trashed for some as well, if you are running low.<br>
+            While an item is equipped, you can see its' stats above Bob. </p>
         <h3 id="cim3">
             List of items
         </h3>
