--- a/help.html
+++ b/help.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Bob's trip in HELL</title>
 </head>
 <body background="helpbg.jpg" >
@@ -22,19 +23,29 @@
         <h3 id="cim3">
             Controls
         </h3>
-        <p> lorem ipsum maderfaker</p>
+        <p> Use your mouse to kill demons.</p>
         <h3 id="cim3">
             Items explained
         </h3>
-        <p> Each round, you can select items, that have energy costs. <br>
-            You will have a total of 10 energy, gaining 2 energy each round. <br>
-            Items that cost can be trashed for some as well, if you are running low.<br>
-            While an item is equipped, you can see its' stats above Bob. </p>
+        <p> Each round, you can select items(by clicking on them),  that have energy costs. <br>
+            You will have a total of 100 energy, gaining 10 energy each round.</p> <br>
+         <p>  Items that cost can be trashed for some as well, if you are running low.<br>
+            While an item is equipped, you can see its' stats above Bob.<br>
+            There  are a total of 3 item types.<br>
+                -Attack
+                -Damage
+                -Potion </p>
         <h3 id="cim3">
-            List of items
+            Equipped Items and Health
         </h3>
         <p> While your item is selected, you can see the stats of it above Bob. <br>
-            Potions in the game, if used, give passive perks for example: DMG boost </p>
+        asdasdasdasdadasdasdasdasdasdasdasdasdasd</p>
+         <p>   Potions in the game, if used, give passive perks for example: DMG boost </p>
+
+            
+
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
