--- a/help.html
+++ b/help.html
@@ -8,15 +8,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Bob's trip in HELL</title>
 </head>
-<body background="helpbg.jpg" >
+<body background="bg2.webp">
     <div>
+        <div style="background-color: rgb(30, 145, 252, 0.3);">
         <h1 id="cim1">
            Bob's trip in hell 
         </h1>
         
-        <h2  id="cim2">
+        <h2  id="cim2" style="margin-bottom: 50px;">
             Explaining the game
         </h2>
+    </div>
         
     </div>
     <div class="container">
@@ -43,7 +45,7 @@
     </div>
         <div class="row">
             <div class="col-sm">
-        <h3 id="cim3" style="margin-top: 100px;" style="text-align: right;">
+        <h3 id="cim3" style="margin-top: 100px;text-align: right;">
             Equipped Items and Health
         </h3>
         <p> While your item is selected, you can see the stats of it above Bob. <br>
