--- a/help.html
+++ b/help.html
@@ -21,9 +21,9 @@
             <li class="nav-item active">
               <a class="nav-link" id="navtext" href="help.html" ><span class="sr-only" id="sillag" style="color: rgba(30, 113, 236, 0.5);">✸</span> Bob's Trip in Hell </a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" id="navtext" href="about_code.html" target="_self" >Coding</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" id="navtext" href="about_us.html" target="_top" >About Us</a>
               </li>
