--- a/help.html
+++ b/help.html
@@ -86,12 +86,12 @@
     <div id="text" style="height:150px; overflow-y: auto; max-width: fit-content;margin-left: auto;margin-right: auto;">
         <p> 
             Each round, you can select items (by clicking on them),  that have energy costs. <br>
-            You will have a total of 100 energy, gaining 10 energy each round.</p> <br>
-         <p>  Items that cost can be trashed for some as well, if you are running low.<br>
+            You will have a total of 120 energy, gaining 20 energy each round.</p> <br>
+         <p>  Items can be trashed as well, if you don't like your current ones.<br>
             While an item is equipped, you can see its' stats above Bob.<br>
             There  are a total of 3 item types:<br>
                 -Attack <br>
-                -Damage <br>
+                -Damage booster <br>
                 -Potion  <br></p>
         <p>
             Enemies' health can be seen under them, right next to their names. <br>
@@ -177,6 +177,5 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
 </body>
 </html>
